# nhs-notify-digital-letters

./: .coverage  .dockerignore  .editorconfig  .gitignore  .gitleaksignore  .prettierignore  .tool-versions  .trivyignore  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.yml  eslint.config.mjs  jest.config.base.ts  jest.config.cjs  package-lock.json  package.json  pnpm-lock.yaml  project.code-workspace  turbo.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md
.github/scripts/: dispatch_internal_repo_workflow.sh
.github/workflows/: cicd-1-pull-request.yaml  cicd-3-deploy.yaml  pr_closed.yaml  pr_create_dynamic_env.yaml  pr_destroy_dynamic_env  pr_destroy_dynamic_env.yaml  release_created  release_created.yaml  scheduled-repository-template-sync.yaml  scorecard.yml  stage-1-commit.yaml  stage-2-test.yaml  stage-3-build.yaml  stage-4-acceptance.yaml  stage-5-publish.yaml  temp-unit-tests-only.yaml
docs/: Gemfile  Makefile  _config.yml  package-lock.json  package.json  webpack.config.js
docs/_includes/: diagram.html  fullscreen.html  head_custom.html
docs/_layouts/: architecture.html  event.html
docs/architecture/: index.md
docs/assets/: aws-icons-mermaid.json
docs/diagrams/: digital-letters-sequence.md  mesh-sequence.md  pdm-poll.md  pdm-upload.md
docs/src/: index.js
lambdas/core-notifier/: package.json
lambdas/core-notifier-lambda/: package.json
lambdas/example-lambda/: package.json
lambdas/file-scanner-lambda/: jest.config.ts  package.json  tsconfig.json
lambdas/file-scanner-move-scanned-files-lambda/: package.json
lambdas/key-generation/: jest.config.ts  package.json
lambdas/mesh-acknowledge/: Makefile  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
lambdas/mesh-download/: Makefile  package_python_lambda.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
lambdas/mesh-download/mesh_download/: __init__.py  config.py  document_store.py  errors.py  handler.py  processor.py
lambdas/mesh-download/mesh_download/__tests__/: __init__.py  test_document_store.py  test_handler.py  test_processor.py
lambdas/mesh-download/src/: config.py  document_store.py  handler.py  processor.py
lambdas/mesh-download/src/__tests__/: test_handler.py  test_processor.py
lambdas/mesh-poll/: Makefile  package.json  package_python_lambda.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tsconfig.json
lambdas/mesh-poll/mesh_poll/: __init__.py  config.py  errors.py  handler.py  processor.py  sender_lookup.py
lambdas/mesh-poll/mesh_poll/__tests__/: test_handler.py  test_processor.py  test_sender_lookup.py
lambdas/mesh-poll/src/: __init__.py  client_lookup.py  config.py  handler.py  index.ts  processor.py  sender_lookup.py
lambdas/mesh-poll/src/__tests__/: index.test.ts  test_client_lookup.py  test_handler.py  test_processor.py  test_sender_lookup.py
lambdas/mesh-poll/tests/: test_mesh_poll.py
lambdas/move-scanned-files-lambda/: package.json
lambdas/nhsapp-status-handler/: package.json
lambdas/pdm-mock-api/: README.md  jest.config.ts  package.json
lambdas/pdm-mock-lambda/: README.md  jest.config.ts  package.json  tsconfig.json
lambdas/pdm-poll-lambda/: package.json
lambdas/pdm-upload-lambda/: jest.config.ts  package.json  tsconfig.json
lambdas/pdm-uploader-lambda/: package.json
lambdas/poll-pdm-lambda/: package.json
lambdas/print-analyser/: package.json
lambdas/print-sender-lambda/: package.json
lambdas/print-status-handler/: jest.config.ts  package.json
lambdas/refresh-apim-access-token/: README.md  jest.config.ts  package.json
lambdas/replacewith_component_name-lambda/: package.json
lambdas/report-event-transformer/: package.json
lambdas/report-generator/: jest.config.ts  package.json
lambdas/report-scheduler/: package.json
lambdas/report-sender/: Makefile  package_python_lambda.sh  pytest.ini  setup.py
pact-contracts/: package.json
scripts/: generate-parallel-jest-config.ts  jest.config.ts  package-lock.json  package.json  publish-pact-contracts.sh  set-github-token.sh  tsconfig.json
scripts/tests/: lint.sh  (+4 more)
src/: .tool-versions  HANDOVER.md  HANDOVER_HISTORY.md  TESTING_PLAN.md
utils/: get_version.sh  package_python_lambda.sh
utils/event-publisher-py/: Makefile  pyproject.toml  pytest.ini  requirements.txt  setup.py
utils/event-publisher-py/event_publisher/: __init__.py  event_publisher.py  mesh_config.py  models.py
utils/event-publisher-py/event_publisher/__tests__/: test_event_publisher.py  test_models.py
utils/metric-publishers/: Makefile  README.md  package.json  poetry.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
utils/metric-publishers/metric_publishers/: certificate_monitor.py
utils/metric-publishers/tests/: test_certificate_monitor.py  test_metric_client.py
utils/py-mock-mesh/: Makefile  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
utils/py-mock-mesh/py_mock_mesh/: __init__.py  mesh_client.py  mesh_message.py
(+1042 files in other folders)
