[tool.poetry]
name = "mesh-poll"
version = "0.1.0"
description = "Poll a MESH mailbox"
authors = ["Your Name <you@example.com>"]
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
certifi = ">= 2023.07.22"
python = "^3.13"
Mesh-Client = "^3.2.3"
structlog = "^21.5.0"
orjson = "^3.9.15"
metric-publishers = {path = "../../utils/metric-publishers", develop = false}
event-publisher-py = {path = "../../utils/event-publisher-py", develop = false}
py-mock-mesh = {path = "../../utils/py-mock-mesh", develop = false}
boto3 = "^1.28.62"
urllib3 = "^1.26.19"
idna = "^3.7"
requests = "^2.32.0"
pyOpenSSL = "^24.2.1"
setuptools = ">=78.1.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pylint = "^2.17.4"
pytest = "^7.0.1"
pytest-cov = "^4.0.0"
jake = "^3.0.1"

[tool.coverage.run]
relative_files = true
omit = ["*/__tests__/*"]

[tool.pytest.ini_options]
pythonpath = "."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
